@@ -1,3 +1,9 @@
+2019-07-23         Koichi Murase         <myoga.murase@gmail.com>
+
+	* builtin.c (do_xor): Remove unneeded local variable `i'. Simplify
+	the loop's computation.
+	(do_and): Improve the initial value for the result.
+
 2019-07-23         Andrew J. Schorr      <aschorr@telemetry-investments.com>
 
 	Fix reporting of negative arguments for and(), or() and xor().
